Harden System Security v1.0.8.0
* Updated dependencies to the latest versions.

* Added a new section to the BitLocker page called "Management". It allows you to view all of the details of each volume and see if any of them is BitLocker encrypted. You can also view key protectors of the unlocked drives and back them up for safe keeping. There is also an option to delete any existing key protector. This section is going to get more features in the next update.

--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,1 +1,5 @@
 * Updated dependencies to the latest versions.
+
+* The texts displayed in the Info Bars throughout the app are now selectable.
+
+* Improved the Logs page by making it easier to copy any number of logs to the clipboard via the new button.
