--- a/AppControl Manager/Strings/ml-IN/Resources.resw
+++ b/AppControl Manager/Strings/ml-IN/Resources.resw
@@ -1099,7 +1099,7 @@
   <data name="CertificateBuildError" xml:space="preserve">
     <value>സർട്ടിഫിക്കറ്റ് നിർമ്മിക്കുമ്പോൾ പിശകുകൾ സംഭവിച്ചു</value>
   </data>
-  <data name="SuccessTitle" xml:space="preserve">
+  <data name="SuccessText" xml:space="preserve">
     <value>വിജയം</value>
   </data>
   <data name="CertificateBuildSuccess" xml:space="preserve">
@@ -1244,9 +1244,6 @@
     <value>നയ ഓപ്ഷനുകൾ</value>
   </data>
   <!-- End of For CI Policy Info ListViews Column Header Buttons -->
-  <data name="Copy" xml:space="preserve">
-    <value>പകർത്തുക </value>
-  </data>
   <data name="PolicyIDLabel" xml:space="preserve">
     <value>നയ ഐഡി: </value>
   </data>
@@ -3091,9 +3088,6 @@
   <data name="CreatingSnapBackGuarantee" xml:space="preserve">
     <value>എൻഫോഴ്‌സ്ഡ് മോഡ് സ്നാപ്പ്ബാക്ക് ഗ്യാരണ്ടി സൃഷ്ടിക്കുന്നു</value>
   </data>
-  <data name="DeployingAuditModePolicy" xml:space="preserve">
-    <value>ഓഡിറ്റ് മോഡ് നയം വിന്യസിക്കുന്നു</value>
-  </data>
   <data name="ScanningSelectedDirectories" xml:space="preserve">
     <value>തിരഞ്ഞെടുത്ത ഡയറക്‌ടറികൾ സ്കാൻ ചെയ്യുന്നു</value>
   </data>
@@ -3105,9 +3099,6 @@
   </data>
   <data name="ResetSuccessful" xml:space="preserve">
     <value>പുനഃസജ്ജമാക്കൽ വിജയകരമായിരുന്നു.</value>
-  </data>
-  <data name="DeployingEnforceModeCuzReset" xml:space="preserve">
-    <value>പ്രവർത്തനം പുനഃസജ്ജമാക്കാൻ ഉപയോക്താവ് തീരുമാനിച്ചതിനാൽ എൻഫോഴ്‌സ്ഡ് മോഡ് നയം വിന്യസിക്കുന്നു</value>
   </data>
   <data name="DeployingEnforceMode" xml:space="preserve">
     <value>എൻഫോഴ്‌സ്ഡ് മോഡ് നയം വിന്യസിക്കുന്നു.</value>
@@ -3694,9 +3685,6 @@
   <data name="GetAuthenticodeHashCalcFileHashError" xml:space="preserve">
     <value>{1} ഉപയോഗിച്ച് {0} ഹാഷ് ചെയ്യാൻ കഴിഞ്ഞില്ല</value>
   </data>
-  <data name="DeployDriversBlockRulesSystemDriveNullMessage" xml:space="preserve">
-    <value>SystemDrive എൻവയോൺമെന്റ് വേരിയബിൾ ശൂന്യമാണ്</value>
-  </data>
   <data name="DeployDriversBlockRulesRefreshPoliciesMessage" xml:space="preserve">
     <value>സിസ്റ്റം ആപ്പ് കൺട്രോൾ നയങ്ങൾ പുതുക്കുന്നു</value>
   </data>
@@ -4143,12 +4131,6 @@
   </data>
   <data name="ConfiguringAndStartingRequiredIsgServicesMessage" xml:space="preserve">
     <value>ആവശ്യമായ ISG അനുബന്ധ സേവനങ്ങൾ ക്രമീകരിക്കുകയും ആരംഭിക്കുകയും ചെയ്യുന്നു</value>
-  </data>
-  <data name="AttemptingToDeserializeDeviceGuardJsonResultMessage" xml:space="preserve">
-    <value>ഡിവൈസ് ഗാർഡ് JSON ഫലം ഡീസീരിയലൈസ് ചെയ്യാൻ ശ്രമിക്കുന്നു.</value>
-  </data>
-  <data name="DeviceGuardDeserializationFailedMessage" xml:space="preserve">
-    <value>ഡിവൈസ് ഗാർഡ് JSON ഡീസീരിയലൈസേഷൻ പരാജയപ്പെട്ടു. റോ JSON:</value>
   </data>
   <data name="IncreasingCodeIntegrityLogSizeMessage" xml:space="preserve">
     <value>കോഡ് ഇന്റഗ്രിറ്റി ലോഗ് വലുപ്പം അതിന്റെ നിലവിലെ ശൂന്യമായ സ്ഥലം 1MB-യിൽ കുറവായതിനാൽ 1MB വർദ്ധിപ്പിക്കുന്നു.</value>
@@ -5727,5 +5709,29 @@
 </data>
   <data name="OpenLogsDirectoryButtonText.Text" xml:space="preserve">
     <value>ലോഗ് ഡയറക്ടറി തുറക്കുക</value>
+  </data>
+    <data name="ExportToJSONButtonText.Text" xml:space="preserve">
+    <value>JSON ഫയലിലേയ്ക്ക് എക്സ്പോർട്ട് ചെയ്യുക</value>
+  </data>
+    <data name="ExportToJSONButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>ListView ഇലുള്ള എല്ലാ ഡാറ്റയും JSON ലേക്ക് എക്സ്പോർട്ട് ചെയ്യുക.</value>
+  </data>
+    <data name="ExportToJSONButton.ToolTipService.ToolTip" xml:space="preserve">
+     <value>ListView ഇലുള്ള എല്ലാ ഡാറ്റയും JSON ലേക്ക് എക്സ്പോർട്ട് ചെയ്യുക.</value>
+  </data>
+  <data name="ExportingToJSONMsg" xml:space="preserve">
+     <value>ഡാറ്റ JSON ഫയലിലേയ്ക്ക് എക്സ്പോർട്ട് ചെയ്യുന്നു, ദയവായി കാത്തിരിക്കുക...</value>
+  </data>
+    <data name="SuccessfullyExportedDataToJSON" xml:space="preserve">
+     <value>വിജയകരമായി {0} ഡാറ്റ JSON ലേക്ക് എക്സ്പോർട്ട് ചെയ്തു, അവ ഇവിടെ സംരക്ഷിച്ചു: '{1}'</value>
+  </data>
+    <data name="CopySelectedButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>തിരഞ്ഞെടുത്ത ഇനങ്ങൾ ക്ലിപ്പ്ബോർഡിലേയ്ക്ക് പകർത്തുക.</value>
+  </data>
+  <data name="CopySelectedButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>തിരഞ്ഞെടുത്ത ഇനങ്ങൾ ക്ലിപ്പ്ബോർഡിലേയ്ക്ക് പകർത്തുക.</value>
+  </data>
+  <data name="CopySelectedButton.Content" xml:space="preserve">
+    <value>തിരഞ്ഞെടുത്തത് പകർത്തുക</value>
   </data>
 </root>
