--- a/Harden System Security/Strings/hi-IN/Resources.resw
+++ b/Harden System Security/Strings/hi-IN/Resources.resw
@@ -1592,9 +1592,6 @@
 <data name="SecurityHardeningCompleted" xml:space="preserve">
   <value>सुरक्षा कठोरीकरण पूर्ण: {0} सफल, {1} विफल।</value>
 </data>
-<data name="ErrorDuringSecurityHardeningOperation" xml:space="preserve">
-  <value>सुरक्षा कठोरीकरण ऑपरेशन के दौरान त्रुटि</value>
-</data>
 <data name="FailedToInitializeDISMServiceForVerification" xml:space="preserve">
   <value>सत्यापन के लिए DISM सेवा आरंभ करने में विफल।</value>
 </data>
@@ -1610,9 +1607,6 @@
 <data name="IncorrectItems" xml:space="preserve">
   <value>गलत आइटम: {0}</value>
 </data>
-<data name="ErrorDuringSecurityHardeningVerification" xml:space="preserve">
-  <value>सुरक्षा कठोरीकरण सत्यापन के दौरान त्रुटि</value>
-</data>
 <data name="FailedToInitializeDISMServiceForRemovingSecurityHardening" xml:space="preserve">
   <value>सुरक्षा कठोरीकरण हटाने के लिए DISM सेवा आरंभ करने में विफल।</value>
 </data>
@@ -1627,9 +1621,6 @@
 </data>
 <data name="SecurityHardeningRemovalCompleted" xml:space="preserve">
   <value>सुरक्षा कठोरीकरण हटाना पूर्ण: {0} सफल, {1} विफल।</value>
-</data>
-<data name="ErrorDuringSecurityHardeningRemovalOperation" xml:space="preserve">
-  <value>सुरक्षा कठोरीकरण हटाने के ऑपरेशन के दौरान त्रुटि</value>
 </data>
 <data name="ErrorDisposingDISMServiceClient" xml:space="preserve">
   <value>DISM सेवा क्लाइंट का निपटान करने में त्रुटि: {0}</value>
@@ -1976,12 +1967,6 @@
 <data name="SeceditFailedWithExitCode" xml:space="preserve">
   <value>Secedit एक्जिट कोड के साथ विफल: {0}</value>
 </data>
-<data name="WarningCouldNotDeleteTemporaryFiles" xml:space="preserve">
-  <value>चेतावनी: अस्थायी फ़ाइलें हटाई नहीं जा सकीं।</value>
-</data>
-<data name="SeceditMethodFailed" xml:space="preserve">
-  <value>Secedit विधि विफल।</value>
-</data>
 <data name="NoSystemAccessSettingsFoundInFile" xml:space="preserve">
   <value>निर्दिष्ट फ़ाइल में कोई [System Access] सेटिंग्स नहीं मिलीं</value>
 </data>
@@ -1990,9 +1975,6 @@
 </data>
 <data name="FileNotFoundPath" xml:space="preserve">
   <value>फ़ाइल नहीं मिली: {0}</value>
-</data>
-<data name="CreatedPolicyDirectory" xml:space="preserve">
-  <value>नीति निर्देशिका बनाई गई: {0}</value>
 </data>
 <data name="FileTooSmallForValidHeader" xml:space="preserve">
   <value>फ़ाइल वैध हेडर के लिए बहुत छोटी है</value>
@@ -2041,9 +2023,6 @@
 </data>
 <data name="LoadedExistingPolicyFileWithEntries" xml:space="preserve">
   <value>{0} एंट्रियों के साथ मौजूदा नीति फ़ाइल लोड की गई</value>
-</data>
-<data name="PolicyFileDoesNotExistCreatingNew" xml:space="preserve">
-  <value>नीति फ़ाइल मौजूद नहीं है, नई खाली नीति फ़ाइल बना रहे हैं</value>
 </data>
 <data name="ReplacedEntries" xml:space="preserve">
   <value>प्रतिस्थापित एंट्रियां: {0}</value>
@@ -3021,4 +3000,290 @@
   <data name="SuccessfullyExportedCertificates" xml:space="preserve">
     <value>सफलतापूर्वक {0} प्रमाणपत्र {1} में निर्यात किए गए</value>
   </data>
+        <!--BitLocker Volumes ListView Headers Start-->
+  <data name="MountPointHeader.Text" xml:space="preserve">
+    <value>माउंट पॉइंट</value>
+  </data>
+  <data name="ProtectionStatusHeader.Text" xml:space="preserve">
+    <value>सुरक्षा स्थिति</value>
+  </data>
+  <data name="ConversionStatusHeader.Text" xml:space="preserve">
+    <value>रूपांतरण स्थिति</value>
+  </data>
+  <data name="EncryptionMethodHeader.Text" xml:space="preserve">
+    <value>एनक्रिप्शन विधि</value>
+  </data>
+    <data name="EncryptionPercentageHeader.Text" xml:space="preserve">
+    <value>एनक्रिप्शन प्रतिशत</value>
+  </data>
+    <data name="WipePercentageHeader.Text" xml:space="preserve">
+    <value>वाइप प्रतिशत</value>
+  </data>
+    <data name="AutoUnlockEnabledHeader.Text" xml:space="preserve">
+    <value>ऑटो अनलॉक सक्षम</value>
+  </data>
+    <data name="AutoUnlockKeyStoredHeader.Text" xml:space="preserve">
+    <value>ऑटो अनलॉक कुंजी संग्रहीत</value>
+  </data>
+    <data name="VolumeTypeHeader.Text" xml:space="preserve">
+    <value>वॉल्यूम प्रकार</value>
+  </data>
+    <data name="CapacityGBHeader.Text" xml:space="preserve">
+    <value>क्षमता GB</value>
+  </data>
+    <data name="FileSystemTypeHeader.Text" xml:space="preserve">
+    <value>फाइल सिस्टम प्रकार</value>
+  </data>
+  <!--BitLocker Volumes ListView Headers End-->
+  <!--BitLocker Volumes ListView Headers Buttons Start-->
+<data name="MountPointColumnHeaderBtn.Content" xml:space="preserve">
+    <value>माउंट पॉइंट</value>
+  </data>
+  <data name="ProtectionStatusColumnHeaderBtn.Content" xml:space="preserve">
+    <value>सुरक्षा स्थिति</value>
+  </data>
+  <data name="ConversionStatusColumnHeaderBtn.Content" xml:space="preserve">
+    <value>रूपांतरण स्थिति</value>
+  </data>
+  <data name="EncryptionMethodColumnHeaderBtn.Content" xml:space="preserve">
+    <value>एनक्रिप्शन विधि</value>
+  </data>
+    <data name="EncryptionPercentageColumnHeaderBtn.Content" xml:space="preserve">
+    <value>एनक्रिप्शन प्रतिशत</value>
+  </data>
+    <data name="WipePercentageColumnHeaderBtn.Content" xml:space="preserve">
+    <value>वाइप प्रतिशत</value>
+  </data>
+    <data name="AutoUnlockEnabledColumnHeaderBtn.Content" xml:space="preserve">
+    <value>ऑटो अनलॉक सक्षम</value>
+  </data>
+    <data name="AutoUnlockKeyStoredColumnHeaderBtn.Content" xml:space="preserve">
+    <value>ऑटो अनलॉक कुंजी संग्रहीत</value>
+  </data>
+    <data name="VolumeTypeColumnHeaderBtn.Content" xml:space="preserve">
+    <value>वॉल्यूम प्रकार</value>
+  </data>
+    <data name="CapacityGBColumnHeaderBtn.Content" xml:space="preserve">
+    <value>क्षमता GB</value>
+  </data>
+    <data name="FileSystemTypeColumnHeaderBtn.Content" xml:space="preserve">
+    <value>फाइल सिस्टम प्रकार</value>
+  </data>
+  <!--BitLocker Volumes ListView Headers Buttons End-->
+  <data name="RetrieveBitLockerVolumesButton.Content" xml:space="preserve">
+    <value>BitLocker वॉल्यूम प्राप्त करें</value>
+  </data>
+    <data name="RetrieveBitLockerVolumesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>सभी वॉल्यूम और उनके BitLocker संबंधित पूर्ण विवरण प्राप्त कर सूचीबद्ध करता है।</value>
+  </data>
+  <data name="RetrieveBitLockerVolumesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>सभी वॉल्यूम और उनके BitLocker संबंधित पूर्ण विवरण प्राप्त कर सूचीबद्ध करता है।</value>
+  </data>
+  <data name="CloseButton.Content" xml:space="preserve">
+    <value>बंद करें</value>
+  </data>
+    <data name="CloseButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>बंद करें</value>
+  </data>
+  <data name="CloseButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>बंद करें</value>
+  </data>
+  <data name="CopyButton.Content" xml:space="preserve">
+    <value>कॉपी</value>
+  </data>
+    <data name="CopyButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>कॉपी</value>
+  </data>
+  <data name="CopyButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>कॉपी</value>
+  </data>
+  <data name="DeleteBLKeyProtectorButton.Content" xml:space="preserve">
+    <value>कुंजी संरक्षक हटाएं</value>
+  </data>
+    <data name="DeleteBLKeyProtectorButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>चयनित वॉल्यूम से कुंजी संरक्षक हटाता है।</value>
+  </data>
+  <data name="DeleteBLKeyProtectorButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>चयनित वॉल्यूम से कुंजी संरक्षक हटाता है।</value>
+  </data>
+  <data name="NoKeyProtectorsFoundMsg.Text" xml:space="preserve">
+    <value>इस वॉल्यूम के लिए कोई कुंजी संरक्षक नहीं मिला।</value>
+  </data>
+  <data name="SelectVolumeFirstToSeeKeyProtectorsMsg.Text" xml:space="preserve">
+    <value>कुंजी संरक्षक देखने के लिए पहले एक वॉल्यूम चुनें।</value>
+  </data>
+  <data name="KeyProtectorsForMsg.Text" xml:space="preserve">
+    <value>कुंजी संरक्षक हेतु</value>
+  </data>
+  <data name="KeyProtectorsForMsg.ToolTipService.ToolTip" xml:space="preserve">
+    <value>चयनित वॉल्यूम के सभी कुंजी संरक्षक प्रदर्शित कर रहा है।</value>
+  </data>
+  <data name="KeyProtectorsForMsg.AutomationProperties.HelpText" xml:space="preserve">
+    <value>चयनित वॉल्यूम के सभी कुंजी संरक्षक प्रदर्शित कर रहा है।</value>
+  </data>
+  <data name="RecoveryPassword.Text" xml:space="preserve">
+    <value>रिकवरी पासवर्ड</value>
+  </data>
+  <data name="CertificateType.Text" xml:space="preserve">
+    <value>प्रमाणपत्र प्रकार</value>
+  </data>
+  <data name="FileName.Text" xml:space="preserve">
+    <value>फ़ाइल नाम</value>
+  </data>
+  <data name="AutoUnlock.Text" xml:space="preserve">
+    <value>ऑटो अनलॉक</value>
+  </data>
+  <data name="Type.Text" xml:space="preserve">
+    <value>प्रकार</value>
+  </data>
+  <data name="Thumbprint.Text" xml:space="preserve">
+    <value>थम्बप्रिंट</value>
+  </data>
+  <data name="ID.Text" xml:space="preserve">
+    <value>ID</value>
+  </data>
+  <data name="BitLockerManagementTab.Header" xml:space="preserve">
+    <value>प्रबंधन</value>
+  </data>
+  <data name="BitLockerManagementTab.ToolTipService.ToolTip" xml:space="preserve">
+    <value>BitLocker वॉल्यूम के एन्क्रिप्शन, डिक्रिप्शन, बैकअप आदि का प्रबंधन करें।</value>
+  </data>
+  <data name="BitLockerManagementTab.AutomationProperties.HelpText" xml:space="preserve">
+    <value>BitLocker वॉल्यूम के एन्क्रिप्शन, डिक्रिप्शन, बैकअप आदि का प्रबंधन करें।</value>
+  </data>
+  <data name="BitLockerSecurityMeasuresTab.Header" xml:space="preserve">
+    <value>सुरक्षा उपाय</value>
+  </data>
+  <data name="BitLockerSecurityMeasuresTab.ToolTipService.ToolTip" xml:space="preserve">
+    <value>BitLocker संबंधित सुरक्षा उपाय प्रबंधित करें।</value>
+  </data>
+  <data name="BitLockerSecurityMeasuresTab.AutomationProperties.HelpText" xml:space="preserve">
+    <value>BitLocker संबंधित सुरक्षा उपाय प्रबंधित करें।</value>
+  </data>
+  <data name="AddKeyProtectorButton.Content" xml:space="preserve">
+    <value>कुंजी संरक्षक जोड़ें</value>
+  </data>
+  <data name="AddKeyProtectorButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>चयनित वॉल्यूम में नया कुंजी संरक्षक जोड़ें। कुंजी संरक्षक वॉल्यूम अनलॉक करने में सक्षम बनाते हैं।</value>
+  </data>
+  <data name="AddKeyProtectorButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>चयनित वॉल्यूम में नया कुंजी संरक्षक जोड़ें। कुंजी संरक्षक वॉल्यूम अनलॉक करने में सक्षम बनाते हैं।</value>
+  </data>
+  <data name="AddKeyProtectorContentDialog.Title" xml:space="preserve">
+    <value>कुंजी संरक्षक जोड़ें</value>
+  </data>
+  <data name="AddKeyProtectorContentDialog.PrimaryButtonText" xml:space="preserve">
+    <value>जोड़ें</value>
+  </data>
+  <data name="AddKeyProtectorContentDialog.CloseButtonText" xml:space="preserve">
+    <value>रद्द</value>
+  </data>
+  <data name="AddKeyProtectorContentDialogSubTitle.Text" xml:space="preserve">
+    <value>इस अनुभाग का उपयोग चयनित वॉल्यूम में नया कुंजी संरक्षक जोड़ने हेतु करें।</value>
+  </data>
+  <data name="TPMKeyProtectorSegmentedItem.Content" xml:space="preserve">
+    <value>TPM</value>
+  </data>
+    <data name="TPMKeyProtectorSegmentedItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>TPM कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="TPMKeyProtectorSegmentedItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>TPM कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="TPMPINKeyProtectorSegmentedItem.Content" xml:space="preserve">
+    <value>TPM + PIN</value>
+  </data>
+    <data name="TPMPINKeyProtectorSegmentedItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>TPM + PIN कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="TPMPINKeyProtectorSegmentedItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>TPM + PIN कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="TPMStartupKeyKeyProtectorSegmentedItem.Content" xml:space="preserve">
+    <value>TPM + स्टार्टअप कुंजी</value>
+  </data>
+  <data name="TPMStartupKeyKeyProtectorSegmentedItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>TPM + स्टार्टअप कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="TPMStartupKeyKeyProtectorSegmentedItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>TPM + स्टार्टअप कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="TPMPINStartupKeyKeyProtectorSegmentedItem.Content" xml:space="preserve">
+    <value>TPM + PIN + स्टार्टअप कुंजी</value>
+  </data>
+    <data name="TPMPINStartupKeyKeyProtectorSegmentedItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>TPM + PIN + स्टार्टअप कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="TPMPINStartupKeyKeyProtectorSegmentedItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>TPM + PIN + स्टार्टअप कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="StartupKeyKeyProtectorSegmentedItem.Content" xml:space="preserve">
+    <value>स्टार्टअप कुंजी</value>
+  </data>
+    <data name="StartupKeyKeyProtectorSegmentedItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>स्टार्टअप कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="StartupKeyKeyProtectorSegmentedItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>स्टार्टअप कुंजी संरक्षक जोड़ें।</value>
+  </data>
+  <data name="TPMSectionTitle.Text" xml:space="preserve">
+    <value>ट्रस्टेड प्लेटफ़ॉर्म मॉड्यूल</value>
+  </data>
+  <data name="TPMSectionDescription.Text" xml:space="preserve">
+    <value>BitLocker एन्क्रिप्शन कुंजी की सुरक्षा हेतु डिवाइस के TPM का उपयोग करता है।</value>
+  </data>
+  <data name="TPMSectionBody.Text" xml:space="preserve">
+    <value>इस संरक्षक के साथ एन्क्रिप्टेड ड्राइव केवल TPM युक्त मदरबोर्ड पर और सिस्टम बूट अखंडता सुरक्षित होने पर ही सुलभ होता है। TPM आधारित संरक्षक सामान्यतः केवल OS वॉल्यूम पर लागू होते हैं।</value>
+  </data>
+  <data name="TPMPINSectionTitle.Text" xml:space="preserve">
+    <value>TPM और व्यक्तिगत पहचान संख्या</value>
+  </data>
+  <data name="TPMPINSectionDescription.Text" xml:space="preserve">
+    <value>BitLocker TPM को उपयोगकर्ता PIN के साथ युग्मित करता है। डिफ़ॉल्ट रूप से PIN 4–20 अंक होता है; विस्तृत PIN पर 4–20 वर्ण (अक्षर, प्रतीक, रिक्ति या अंक) हो सकते हैं।</value>
+  </data>
+  <data name="TPMStartupKeySectionTitle.Text" xml:space="preserve">
+    <value>TPM और स्टार्टअप कुंजी</value>
+  </data>
+  <data name="TPMStartupKeySectionDescription.Text" xml:space="preserve">
+    <value>BitLocker TPM को USB फ्लैश ड्राइव से इनपुट के साथ उपयोग करता है। डिवाइस बूट करने हेतु USB फ्लैश ड्राइव लगा होना चाहिए।</value>
+  </data>
+  <data name="TPMPINStartupKeySectionTitle.Text" xml:space="preserve">
+    <value>TPM, PIN और स्टार्टअप कुंजी</value>
+  </data>
+  <data name="TPMPINStartupKeySectionDescription.Text" xml:space="preserve">
+    <value>BitLocker TPM, स्टार्टअप PIN और बाह्य कुंजी युक्त USB फ्लैश ड्राइव के इनपुट का संयोजन उपयोग करता है। यह BitLocker का सबसे सुरक्षित विन्यास है तथा बहु-कारक प्रमाणीकरण प्रदान करता है.</value>
+  </data>
+  <data name="StartupKeySectionTitle.Text" xml:space="preserve">
+    <value>स्टार्टअप कुंजी</value>
+  </data>
+  <data name="StartupKeySectionDescription.Text" xml:space="preserve">
+    <value>BitLocker बाहरी कुंजी वाले USB फ्लैश ड्राइव के इनपुट का उपयोग करता है। सिस्टम बूट से पहले USB डिवाइस जुड़ा होना चाहिए।</value>
+  </data>
+  <data name="RetrievingBitLockerVolumesEllipsis" xml:space="preserve">
+  <value>BitLocker वॉल्यूम प्राप्त कर रहा है...</value>
+</data>
+<data name="LoadedBitLockerVolumesCount" xml:space="preserve">
+  <value>{0} BitLocker वॉल्यूम लोड किए गए.</value>
+</data>
+<data name="NoOutputReturnedFromPath" xml:space="preserve">
+  <value>{0} से कोई आउटपुट वापस नहीं आया</value>
+</data>
+<data name="NoBitLockerVolumesDetected" xml:space="preserve">
+  <value>कोई BitLocker वॉल्यूम नहीं मिला.</value>
+</data>
+<data name="ParentVolumeForKeyProtectorNotFound" xml:space="preserve">
+  <value>कुंजी संरक्षक का मूल वॉल्यूम नहीं मिला.</value>
+</data>
+<data name="RemovingKeyProtectorFromVolume" xml:space="preserve">
+  <value>{1} से कुंजी संरक्षक {0} हटाया जा रहा है</value>
+</data>
+<data name="ExternalKeyRemovalConditionalSuccess" xml:space="preserve">
+  <value>यदि ExternalKey कुंजी संरक्षक जिसकी ID {0} {1} पर है ड्राइव को अनलॉक रखने हेतु उपयोग में नहीं था तो उसे हटा दिया गया. अधिक जानकारी लॉग पृष्ठ पर उपलब्ध है.</value>
+</data>
+<data name="SuccessfullyRemovedKeyProtector" xml:space="preserve">
+  <value>{2} से ID {1} वाला प्रकार {0} का कुंजी संरक्षक सफलतापूर्वक हटाया गया.</value>
+</data>
+<data name="NoBitLockerVolumeSelected" xml:space="preserve">
+  <value>कोई BitLocker वॉल्यूम चयनित नहीं है.</value>
+</data>
 </root>
